# movie_recommender

./: .gitignore  pyproject.toml  readme.md
src/recommender/: config.py  main.py  recommender.py  retreiever.py  st_app.py
src/recommender/data_prep/: retriever.py  transform_load.py
