[project]
name = "recommender"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Het Parekh", email = "hetparekh16@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
recommender = "recommender:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
