[project]
name = "recommender"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Het Parekh", email = "hetparekh16@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "asyncio>=3.4.3",
    "chromadb>=0.6.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
